--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,23 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <title>LIFF Starter</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
     <body>
         <div id="liffAppContent">
             <!-- ACTION BUTTONS -->
+            <!-- <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Basic example">                 -->
             <div class="buttonGroup">
                 <div class="buttonRow">
+                    <button id="sendMessageButton" type="button" class="btn btn-primary">Send Message</button>
+                    <button id="shareTargetPicker" type="button" class="btn btn-success">Open Share Target Picker</button>
+                    <button id="closeWindowButton" type="button" class="btn btn-danger">Close LIFF App</button>
+                </div>
+
+                <!-- <div class="buttonRow">
                     <button id="openWindowButton">Open External Window</button>
                     <button id="closeWindowButton">Close LIFF App</button>
                 </div>
@@ -24,7 +32,7 @@
                 </div>
                 <div class="buttonRow">
                     <button id="shareTargetPicker">Open Share Target Picker</button>
-                </div>
+                </div> -->
             </div>
             <div id="shareTargetPickerMessage"></div>
             <!-- ACCESS TOKEN DATA -->
@@ -139,6 +147,9 @@
             <p>Unable to receive the LIFF ID as an environment variable.</p>
         </div>
         <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <script src="liff-starter.js"></script>
     </body>
 </html>
