讓傳送及分享兩個按鈕功能正常

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
             <!-- <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Basic example">                 -->
             <div class="buttonGroup">
                 <div class="buttonRow">
-                    <button id="sendMessageButton" type="button" class="btn btn-primary">Send Message</button>
-                    <button id="shareTargetPicker" type="button" class="btn btn-success">Open Share Target Picker</button>
-                    <button id="closeWindowButton" type="button" class="btn btn-danger">Close LIFF App</button>
+                    <button id="sendMessageButton" type="button" class="btn btn-primary">傳送到目前的聊天室</button>
+                    <button id="shareTargetPicker" type="button" class="btn btn-success">傳送給朋友</button>
+                    <button id="closeWindowButton" type="button" class="btn btn-danger">關閉此頁</button>
                 </div>
 
                 <!-- <div class="buttonRow">
