fix google map link and button group vertical

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
             <!-- ACTION BUTTONS -->
             <!-- <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Basic example">                 -->
             <div class="buttonGroup">
-                <div class="buttonRow">
-                    <button id="sendMessageButton" type="button" class="btn btn-primary">傳送到目前的聊天室</button>
-                    <button id="shareTargetPicker" type="button" class="btn btn-success">傳送給朋友</button>
-                    <button id="closeWindowButton" type="button" class="btn btn-danger">關閉此頁</button>
+                <div class="btn-group-vertical" role="group" aria-label="Basic example">
+                    <button id="sendMessageButton" type="button" class="btn btn-lg btn-primary">傳送到目前的聊天室</button>
+                    <button id="shareTargetPicker" type="button" class="btn btn-lg btn-success">傳送給朋友</button>
+                    <button id="closeWindowButton" type="button" class="btn btn-lg btn-danger">關閉此頁</button>
                 </div>
 
                 <!-- <div class="buttonRow">
