--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
             <!-- <div class="btn-group-vertical btn-group-lg" role="group" aria-label="Basic example">                 -->
             <div class="buttonGroup">
                 <div class="btn-group-vertical" role="group" aria-label="Basic example">
-                    <button id="sendMessageButton" type="button" class="btn btn-lg btn-primary">傳送到目前的聊天室</button>
-                    <button id="shareTargetPicker" type="button" class="btn btn-lg btn-success">傳送給朋友</button>
+                    <button id="sendMessageButton" type="button" class="btn btn-lg btn-primary mb-2">傳送到目前的聊天室</button>
+                    <button id="shareTargetPicker" type="button" class="btn btn-lg btn-success mb-2">傳送給朋友</button>
                     <button id="closeWindowButton" type="button" class="btn btn-lg btn-danger">關閉此頁</button>
                 </div>
 
